CHỉnh sửa lỗi Prunning

--- a/DL/trainDL.ipynb
+++ b/DL/trainDL.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.models import Model, Sequential\n",
-    "from tensorflow.keras.layers import Input, Dense, Conv2D, Flatten, Softmax\n",
+    "from tensorflow.keras.layers import Input, Dense, Conv2D, BatchNormalization, Flatten, Softmax\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "import numpy as np\n",
     "import pickle"
    ]
@@ -21,20 +22,20 @@
    "source": [
     "Branch = Sequential([\n",
     "    Input(shape=(7, 7, 1)),\n",
-    "    Conv2D(512, (4, 4), padding='valid', activation=\"relu\"),\n",
+    "    Conv2D(256, (3, 3), activation='linear', padding='valid', kernel_initializer='he_normal'),\n",
+    "    BatchNormalization(),\n",
+    "    Conv2D(512, (3, 3), activation='linear', padding='valid', kernel_initializer='he_normal'),   \n",
     "    Flatten(),\n",
-    "    Dense(512, activation=\"relu\"),\n",
-    "    Dense(128, activation=\"relu\"),\n",
-    "    Dense(64, activation=\"relu\"),\n",
+    "    BatchNormalization(),\n",
+    "    Dense(1024, activation=\"linear\", kernel_initializer='he_normal'),\n",
+    "    Dense(256, activation=\"linear\", kernel_initializer='he_normal'),\n",
+    "    Dense(64, activation=\"linear\", kernel_initializer='he_normal'),\n",
     "    Dense(7, activation=\"linear\")\n",
     "])\n",
     "\n",
-    "Root = Sequential([\n",
-    "    Branch,     # Sử dụng kết quả từ Branch làm input cho kết luận cuối\n",
-    "    Softmax()   # Thực hiện Softmax trực tiếp lên output của Branch\n",
-    "])\n",
+    "# Root = Softmax(Branch.output)   # Thực hiện Softmax trực tiếp lên output của Branch\n",
     "\n",
-    "Branch.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+    "Branch.compile(loss='categorical_crossentropy', optimizer=Adam(learning_rate=1e-4), metrics=['mse', 'accuracy'])"
    ]
   },
   {
@@ -68,7 +69,9 @@
     "if len(train_data) == len(label_data) :\n",
     "    print(len(train_data), 'samples')\n",
     "else :\n",
-    "    'Lỗi về mẫu training-set'"
+    "    'Lỗi về mẫu training-set'\n",
+    "\n",
+    "label_data[100]"
    ]
   },
   {
@@ -77,7 +80,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Branch.fit(train_data, label_data, epochs = 150, verbose = 1)"
+    "Branch.fit(train_data, label_data, epochs = 256, verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Branch.predict(np.array([[[0, 0, 0, 0, 0, 0, 0],\n",
+    "                         [0, 0, 0, 0, 0, 0, 0],\n",
+    "                         [0, 0, 0, 0, 0, 0, 0],\n",
+    "                         [0, 0, 0, 0, 0, 0, 0],\n",
+    "                         [0, 0, -1, -1, 0, 0, 0],\n",
+    "                         [0, 0, -1, 1, 0, 0, 0],\n",
+    "                         [0, 0, -1, 1, 1, 0, 0]]]))"
    ]
   },
   {
@@ -87,7 +105,7 @@
    "outputs": [],
    "source": [
     "Root.save(\"DL/model/Root.h5\")\n",
-    "Branch.save(\"DL/Files/Branch.h5\")"
+    "Branch.save(\"DL/model/Branch.h5\")"
    ]
   }
  ],
